--- a/sms/sms/src/main/resources/application.properties
+++ b/sms/sms/src/main/resources/application.properties
@@ -9,7 +9,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Server port
 server.port=8080
+
+# JWT
+jwt.secret=MySuperSecretKeyForJwt
+jwt.expiration=86400000   # 1 day in ms
+
+# Fast2SMS
+#fast2sms.api.key=YOUR_FAST2SMS_API_KEY
