--- a/sms/sms/src/main/resources/application.properties
+++ b/sms/sms/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
 
 # JWT
-jwt.secret=MySuperSecretKeyForJwt
-jwt.expiration=86400000   # 1 day in ms
+jwt.secret=ThisIsASecretKeyForJWTWhichIsAtLeast32BytesLong123
+jwt.expiration=86400000
 
 # Fast2SMS
 #fast2sms.api.key=YOUR_FAST2SMS_API_KEY
