sms service done

--- a/sms/sms/src/main/resources/application.properties
+++ b/sms/sms/src/main/resources/application.properties
@@ -19,4 +19,5 @@ jwt.secret=ThisIsASecretKeyForJWTWhichIsAtLeast32BytesLong123
 jwt.expiration=86400000
 
 # Fast2SMS
-#fast2sms.api.key=YOUR_FAST2SMS_API_KEY
+fast2sms.api.key=YOUR_FAST2SMS_API_KEY
+fast2sms.url=https://www.fast2sms.com/dev/bulkV2
